# gcef

./: .gitignore  SPECIFICATION.md
docs/: GCEF_specification_v0.6.md
gcef/: CHANGELOG.md  LICENCE  README.md  pyproject.toml
gcef/.github/: PULL_REQUEST_TEMPLATE.md
gcef/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
gcef/.github/workflows/: ci.yml
gcef/gcef/: __init__.py  assumptions.py  bounds.py  estimand.py  exceptions.py  outcomes.py  pipeline.py  report.py  shock.py  stage1.py  stage2.py  treatment.py
gcef/gcef/testing/: __init__.py  synthetic.py
gcef/tests/: synthetic.py  test_assumptions.py  test_exceptions_and_estimand.py  test_report.py  test_stage1.py  test_synthetic.py  test_treatment.py
tests/: test_bounds.py  test_outcomes.py  test_pipeline.py  test_shock.py
